# Student-Manager

./: .gitignore  CMakeLists.txt  README.md  README.txt
data/: backup.json  cources.json  students.csv  students.json  teachers.json
include/: Course.h  Manager.h  Student.h  Teacher.h  Utils.h
src/: Course.cpp  Manager.cpp  Menu.cpp  Student.cpp  Teacher.cpp  Utils.cpp  main.cpp
